# usdc-arc-remote-mcp-demo

./: Procfile  README.md  manifest.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/ai_cop_mcp_demo/: api_client.py  constants.py  server.py  utils.py
src/ai_cop_mcp_demo/models/: aggregation_models.py  document_models.py  multiple_reports_models.py
src/ai_cop_mcp_demo/tools/: agency_tools.py  aggregation_tools.py  documents.py  multiple_reports_tools.py
src/usdc_arc_mcp_demo/: api_client.py  app.py  constants.py  server.py  utils.py
src/usdc_arc_mcp_demo/models/: aggregation_models.py  multiple_reports_models.py
src/usdc_arc_mcp_demo/tools/: agency_tools.py  aggregation_tools.py  multiple_reports_tools.py  single_report_tool.py
